# AcheTece

./: .gitignore  .replit  atualizar_email.py  auth.py  buscar_modelo.py  database.py  gerar_cidades_ibge.py  main.py  pyproject.toml  requirements.txt  reset_db.py  seed_demo.py  training_catalog.py
instance/: banco.db
static/: header.css  style.css  thumbs
templates/: admin_empresas.html  admin_login.html  banco.db  base.html  busca.html  cadastrar_empresa.html  cadastrar_teares.html  cadastro  cadastro.html  criar_conta_cliente.html  editar_empresa.html  editar_tear.html  empresa_perfil.html  erro_pagamento.html  erro_token.html  escolher_perfil.html  esqueci_senha.html  fale_conosco.html  index.html  listar_teares.html  login.html  login_cod  login_code.html  login_method  login_method.html  login_password  login_senha.html  malharia_info.html  mensagem_sucesso.html  pagamento_aprovado.html  pagamento_erro.html  pagamento_pendente.html  pagamento_sucesso.html  painel.html  painel_malharia.html  performance_acesso.html  planos.html  quem_somos.html  redefinir_senha.html  termos_politicas.html  (+3 more)
