[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.1",
    "gspread>=6.2.1",
    "oauth2client>=4.1.3",
    "werkzeug>=3.1.3",
    "flask-mail>=0.10.0",
    "mercadopago>=2.3.0",
    "sqlalchemy>=2.0.41",
    "itsdangerous>=2.2.0",
]
